--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@popperjs/core": "^2.11.8",
     "angularx-qrcode": "^19.0.0",
     "bootstrap": "^5.3.3",
+    "downloadjs": "^1.4.7",
+    "html-to-image": "^1.11.13",
     "iban-ts": "^0.10.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -32,6 +34,7 @@
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.0",
     "@angular/localize": "^19.0.0",
+    "@types/downloadjs": "^1.4.6",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
